--- a/templates/weather.html
+++ b/templates/weather.html
@@ -300,6 +300,9 @@
                 <!-- CRUD Panel Status -->
                 <div id="crud-panel-status" class="col-12">
                     <p ></p>
+                    {% for item in wind_data %}
+                    <p >{{ item.wind_speed }}</p>
+                    {% endfor %}
                 </div>
             </div>
         </div>
