Set selected record in edition panel of weather page for later update

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -240,19 +240,19 @@
                                 <div class="col-12 col-sm-6 col-md-3 weather-data-value">
                                     <input id="crud-value-description" type="text" maxlength="16" required>
                                 </div>
-                            
-                                <div class="col-12 col-sm-6 col-md-3 weather-data-label text-center text-sm-right">
-                                    <label for="crud-value-country" id="label-for-crud-value-country">Country</label>
-                                </div>
-                                <div class="col-12 col-sm-6 col-md-3 weather-data-value">
-                                    <input id="crud-value-country" type="text" maxlength="16" required>
-                                </div>
-                            
+                                                      
                                 <div class="col-12 col-sm-6 col-md-3 weather-data-label text-center text-sm-right">
                                     <label for="crud-value-date" id="label-for-crud-value-date">Date</label>
                                 </div>
                                 <div class="col-12 col-sm-6 col-md-3 weather-data-value">
                                     <input id="crud-value-date" type="date" required>
+                                </div>
+
+                                <div class="col-12 col-sm-6 col-md-3 weather-data-label text-center text-sm-right">
+                                    <label for="crud-value-time" id="label-for-crud-value-time">Time</label>
+                                </div>
+                                <div class="col-12 col-sm-6 col-md-3 weather-data-value">
+                                    <input id="crud-value-time" type="text" maxlength="16" required>
                                 </div>
                             
                                 <div class="col-12 col-sm-6 col-md-3 weather-data-label text-center text-sm-right">
