Add delete functionality for records and add classes to visualize fields in Django Admin

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -407,9 +407,9 @@ a.nav-link {
 /* CRUD Panel */
 
 /* Hidden element to associate record for later update */
-#hidden-id-for-update {
+/*#hidden-id-for-update {
     display: none;
-}
+}*/
 
 #crud-panel-title {
     margin-top: 20px;
