--- a/templates/weather.html
+++ b/templates/weather.html
@@ -400,7 +400,7 @@
                             <td>{{ other.1.0 }}</td>
                             <td>{{ other.1.1 }}</td>
                             <td><button type="button" class="btn btn-warning btn-sm edit-button-in-table" id="other_1_{{ other.1.2 }}">Update {{ other.1.2 }}</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm delete-button-in-table" id="other_rec_2_{{ other.1.2 }}">Delete {{ other.1.2 }}</button></td>      
+                            <td><button type="button" class="btn btn-danger btn-sm delete-button-in-table" id="other_2__{{ other.1.2 }}">Delete {{ other.1.2 }}</button></td>      
                         </tr>
                     {% endfor %}
                 </table>
